fixed appearance on mobile lol

--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@ body {
     padding: 12px;
 }
 
+@media (max-width: 768px) {
+    .card .text {
+        font-size: clamp(16px, 4vw, 20px);
+    }
+}
+
 .card .symbol {
     position: relative;
     background-color: #003049;
@@ -56,6 +62,21 @@ h1 {
     color: #800020;
     margin-right: 20px;
     margin-bottom: 0;
+}
+
+@media (max-width: 768px) {
+    .top {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    h1 {
+        font-size: 30px;
+    }
+
+    .container{
+        margin-top: 150px;
+    }
 }
 
 .heart {
